[gd_scene load_steps=19 format=3 uid="uid://c3lc07c222867"]

[ext_resource type="Script" path="res://FrontEnd/Scripts/Screen_MainMenu.gd" id="1_6ltrc"]
[ext_resource type="Texture2D" uid="uid://d3spyeey0lukx" path="res://Assets/Menu/UI/V2/Background.png" id="2_lhgq6"]
[ext_resource type="Texture2D" uid="uid://djmn7ihhlh425" path="res://Assets/Menu/UI/V2/Tapete.png" id="3_yt7ui"]
[ext_resource type="Texture2D" uid="uid://tj3fv8somlur" path="res://Assets/Menu/UI/V2/buttons/Options Normal.png" id="4_d2uiq"]
[ext_resource type="Texture2D" uid="uid://c682ui2h2p85" path="res://Assets/Menu/UI/V2/buttons/Options Clicked.png" id="5_s1o7r"]
[ext_resource type="Texture2D" uid="uid://cudqcxhxpuv47" path="res://Assets/Menu/UI/V2/buttons/Options Hover.png" id="6_oxnef"]
[ext_resource type="Texture2D" uid="uid://0cpud4f0qrf4" path="res://Assets/Menu/UI/V2/buttons/Play Normal.png" id="7_bbtjv"]
[ext_resource type="Texture2D" uid="uid://drbi17ku20lan" path="res://Assets/Menu/UI/V2/buttons/Play Clicked.png" id="8_ipj1m"]
[ext_resource type="Texture2D" uid="uid://dg86fxseyeb0" path="res://Assets/Menu/UI/V2/buttons/Play Hover.png" id="9_n4ct4"]
[ext_resource type="Texture2D" uid="uid://bw7bv88v2gb34" path="res://Assets/Menu/UI/V2/buttons/Exit Normal.png" id="10_xlvql"]
[ext_resource type="Texture2D" uid="uid://dkjgo45s6s763" path="res://Assets/Menu/UI/V2/buttons/Exit Clicked.png" id="11_0qlry"]
[ext_resource type="Texture2D" uid="uid://cuf5r24ocratb" path="res://Assets/Menu/UI/V2/buttons/Exit Hover.png" id="12_mdh1h"]
[ext_resource type="Texture2D" uid="uid://dr2gp0h8pyjp6" path="res://Assets/Menu/UI/V2/ambient/Front Torches Light Pass.png" id="13_0xvmm"]
[ext_resource type="Texture2D" uid="uid://b1cs1d846bhwc" path="res://Assets/Menu/UI/V2/ambient/Front Torches Diffuse Pass.png" id="14_r3nb6"]
[ext_resource type="Texture2D" uid="uid://kuqlwkow3j2y" path="res://Assets/Menu/UI/V2/ambient/Left Torch Diffuse Pass.png" id="15_oetf6"]
[ext_resource type="Texture2D" uid="uid://bbtsiloswlhlc" path="res://Assets/Menu/UI/V2/ambient/Left Torch Light Pass.png" id="16_7pdud"]
[ext_resource type="Texture2D" uid="uid://c1jp0084xct5" path="res://Assets/Menu/UI/V2/ambient/Right Torch Diffuse Pass.png" id="17_ax8vm"]
[ext_resource type="Texture2D" uid="uid://cy3hwhtt3vud7" path="res://Assets/Menu/UI/V2/ambient/Right Torch Light Pass.png" id="18_5gcgt"]

[node name="Screen_MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ltrc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackGround_BG" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lhgq6")
expand_mode = 2

[node name="BackGround_Carpet" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = 610.0
offset_right = 112.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yt7ui")
expand_mode = 2

[node name="BackGround_FrontTorches" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/BackGround_FrontTorches"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("13_0xvmm")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BackGround_FrontTorches"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("14_r3nb6")
expand_mode = 2

[node name="BackGround_LeftTorch" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BackGround_LeftTorch"]
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1083.0
mouse_filter = 2
texture = ExtResource("15_oetf6")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/BackGround_LeftTorch"]
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1083.0
mouse_filter = 2
texture = ExtResource("16_7pdud")
expand_mode = 3
stretch_mode = 5

[node name="BackGround_LeftTorch2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BackGround_LeftTorch2"]
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1083.0
mouse_filter = 2
texture = ExtResource("17_ax8vm")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/BackGround_LeftTorch2"]
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1083.0
mouse_filter = 2
texture = ExtResource("18_5gcgt")
expand_mode = 3
stretch_mode = 5

[node name="Button_Options" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 234.0
offset_top = 19.0
offset_right = -1351.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_d2uiq")
texture_pressed = ExtResource("5_s1o7r")
texture_hover = ExtResource("6_oxnef")
ignore_texture_size = true
stretch_mode = 5

[node name="Button_Play" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 800.0
offset_top = -1.0
offset_right = -801.0
offset_bottom = -382.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_bbtjv")
texture_pressed = ExtResource("8_ipj1m")
texture_hover = ExtResource("9_n4ct4")
ignore_texture_size = true
stretch_mode = 5

[node name="Button_Quit" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1356.0
offset_top = 17.0
offset_right = -232.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_xlvql")
texture_pressed = ExtResource("11_0qlry")
texture_hover = ExtResource("12_mdh1h")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="CanvasLayer/Button_Options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Button_Quit" to="." method="_on_button_quit_pressed"]
